--- a/css/folders.css
+++ b/css/folders.css
@@ -33,6 +33,7 @@
   user-select:none;
     -moz-user-select:none;
     -webkit-user-select:none;
+  vertical-align:middle;
   white-space:nowrap;
 }
 .jqf-folder-tab.jqf-active,
